infra/k8s-dev/ingress.srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "session"
spec:
  rules:
    - host: mega-messenger.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
